--- a/views/about.ejs
+++ b/views/about.ejs
@@ -24,26 +24,20 @@
 
 <body>
 	<div  id='title'>
-	<t1>About Us!</t1>
+	<h1>About Us!</h1>
 	</div>
 
-	<div id='textbody' class='textbox'>
-		<p>Hello! We are the Weird Side of Youtube! This is an open-source project started by members of Alpha Chi Rho fraternity at Rensselaer Polytechnic Institute in Troy New York. The curent team is comprised of Erik Baktis, Matt Zielinski, and Mike Metrocavich. Past members include:
-			<ul>
-				<li>Jake Martin</li>
-				<li>Ashwin Raghuraman</li>
-				<li>Alex Metrocavich</li>
-			</ul>
-	
+	<div id='textbody'>
+		<p>Hello! Welcome to The Weird Side of YouTube! We are an open-source project started by members of Alpha Chi Rho fraternity at Rensselaer Polytechnic Institute in Troy New York. 
+		<br>
+		The current team is comprised of Erik Baktis, Matt Zielinski, and Mike Metrocavich. Past members include Jake Martin Ashwin Raghuraman, and Alex Metrocavich
+		<br>	
 		If you would like to learn more about RCOS at RPI or any of the oher active projects, visit
 	<a href="https://rcos.io">our web page</a></p>
 	</div>
 
 	<div id="rpi_logo">
-    <img src="https://upload.wikimedia.org/wikipedia/en/a/a9/RPI_Engineers.svg" alt="" />
-	</div>
-	<div
-		< style="width:304px;height:228px;">
+    	<img src="https://upload.wikimedia.org/wikipedia/en/a/a9/RPI_Engineers.svg" alt="" />
 	</div>
 
 </body>
