--- a/views/about.ejs
+++ b/views/about.ejs
@@ -20,9 +20,18 @@
    </ul>
 </div>
 
+<style>
+		body {
+        background-image: url("https://upload.wikimedia.org/wikipedia/en/a/a9/RPI_Engineers.svg");
+        background-repeat: no-repeat;
+        background-size: cover;
+	} 
+</style>
+
 <br>
 
 <body>
+
 	<div  id='title'>
 	<h1>About Us!</h1>
 	</div>
@@ -33,13 +42,8 @@
 		The current team is comprised of Erik Baktis, Matt Zielinski, and Mike Metrocavich. Past members include Jake Martin Ashwin Raghuraman, and Alex Metrocavich
 		<br>	
 		If you would like to learn more about RCOS at RPI or any of the oher active projects, visit
-	<a href="https://rcos.io">our web page</a></p>
+	<a href="https://rcos.io">our web page.</a></p>
 	</div>
-
-	<div id="rpi_logo">
-    	<img src="https://upload.wikimedia.org/wikipedia/en/a/a9/RPI_Engineers.svg" alt="" />
-	</div>
-
 </body>
 
 
