--- a/views/about.ejs
+++ b/views/about.ejs
@@ -20,34 +20,28 @@
    </ul>
 </div>
 
-<style>
-		body {
-        background-image: url("https://upload.wikimedia.org/wikipedia/en/a/a9/RPI_Engineers.svg");
-        background-repeat: no-repeat;
-        background-size: cover;
-	} 
-</style>
-
+<br>
+<br>
 <br>
 
 <body>
+	<div  id='textbox'>
+		<div  id='title'>
+			<h1>About Us!</h1>
+			<div  id='textbody'>
+			<p>Hello! Welcome to The Weird Side of YouTube! We are an open-source project started by members of Alpha Chi Rho fraternity at Rensselaer Polytechnic Institute in Troy New York. 
+			<br>
+			<br>
+			The current team is comprised of Erik Baktis, Matt Zielinski, and Mike Metrocavich. Past members include Jake Martin Ashwin Raghuraman, and Alex Metrocavich
+			<br>	
+			<br>
+			If you would like to learn more about RCOS at RPI or any of the oher active projects, visit
+		<a href="https://rcos.io">our web page.</a></p>
+		</div>
+		</div>
+	</div>	
 
-	<div  id='title'>
-	<h1>About Us!</h1>
-	</div>
-
-	<div id='textbody'>
-		<p>Hello! Welcome to The Weird Side of YouTube! We are an open-source project started by members of Alpha Chi Rho fraternity at Rensselaer Polytechnic Institute in Troy New York. 
-		<br>
-		The current team is comprised of Erik Baktis, Matt Zielinski, and Mike Metrocavich. Past members include Jake Martin Ashwin Raghuraman, and Alex Metrocavich
-		<br>	
-		If you would like to learn more about RCOS at RPI or any of the oher active projects, visit
-	<a href="https://rcos.io">our web page.</a></p>
+	<div id='bg_image'>
 	</div>
 </body>
-
-
-
-
-
 </html>
