Replaced logo on about us and made it the background
Could still use resizing

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,5 +1,16 @@
 <!DOCTYPE html>
 <html>
+
+<style>
+	body {
+		background-image: url("http://www.logospike.com/wp-content/uploads/2014/11/Rpi_logo.png");
+	    background-size: auto auto;
+	    background-position: top center;
+	    overflow: hidden;
+	    background-repeat: no-repeat;
+}
+</style>
+
 <link rel="stylesheet" type="text/css" href="./css/newstyle.css">
 <div id='navbar'>
   <ul>
@@ -43,5 +54,6 @@
 
 	<div id='bg_image'>
 	</div>
+
 </body>
 </html>
