--- a/public/css/newstyle.css
+++ b/public/css/newstyle.css
@@ -7,12 +7,6 @@ body {
   z-index: -2;
 }
 
-#bg_image {
-  background: transparent url(https://upload.wikimedia.org/wikipedia/en/a/a9/RPI_Engineers.svg);
-  opacity: 0.6;
-  z-index: -1;
-}
-
 input {
   color: #000000;
   font-family: 'Open Sans', sans-serif;
@@ -188,20 +182,21 @@ input {
   text-align: center;
   font-size: 18px;
   font-weight: lighter;
+  font-variant: normal;
   width: 75%;
-  font-family: 'calibri';
+  font-family: 'Calibri';
   color: rgb(240, 240, 240);
   margin-left: auto;
   margin-right: auto;
 }
 
 #textbox {
-  background-color: rgba(40, 45, 45, 0.9);
+  background-color: rgba(40, 40, 42, 0.95);
   box-shadow: 0px 0px 100px #35383b;
   border: 1px hidden;
   width: 75%;
   margin: auto;
-  padding: 5px 5px 5px 5px;
+  padding: 5px 5px 10px 5px;
 }
   
 
