--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
 
-<style>
-	body {
-		background-image: url("http://www.logospike.com/wp-content/uploads/2014/11/Rpi_logo.png");
-	    background-size: auto auto;
-	    background-position: top center;
-	    overflow: hidden;
-	    background-repeat: no-repeat;
-	    opacity: .5;
-}
-</style>
+<div id='aboutstyle'>
+	<style>
+		body {
+			background-image: url("http://www.logospike.com/wp-content/uploads/2014/11/Rpi_logo.png");
+		    background-size: auto auto;
+		    background-position: top center;
+		    overflow: hidden;
+		    background-repeat: no-repeat;
+	}
+	</style>
+</div>
 
 <link rel="stylesheet" type="text/css" href="./css/newstyle.css">
 <div id='navbar'>
