--- a/public/css/newstyle.css
+++ b/public/css/newstyle.css
@@ -1,10 +1,14 @@
 body {
-  background-color: rgb(25, 25, 25);
+  background: rgb(25, 25, 25);
   margin: 0px;
   font-family: 'Open Sans', sans-serif;
   text-transform: uppercase;
   font-size: 12px;
   z-index: -2;
+  background-image: url(http://www.weirdtube.wtf/img/Rpi_logo.png);
+  background-repeat: no-repeat;
+  background-position: center top;
+  background-size: 50%;
 }
 
 input {
@@ -191,16 +195,12 @@ input {
 }
 
 #textbox {
-  background-color: rgba(10, 10, 12, 0.95);
+  background-color: rgba(30, 30, 32, 0.80);
   box-shadow: 0px 0px 100px #35383b;
   border: 1px hidden;
   width: 75%;
   margin: auto;
   padding: 5px 5px 10px 5px;
-}
-  
-#aboutstyle {
-  opacity: 0.75;
 }
 
 #youtube-player-container {
