--- a/public/css/newstyle.css
+++ b/public/css/newstyle.css
@@ -1,5 +1,6 @@
 body {
   background: rgb(25, 25, 25);
+  color: rgb(240, 240, 240);
   margin: 0px;
   font-family: 'Open Sans', sans-serif;
   text-transform: uppercase;
