--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -77,9 +77,6 @@
 	var currentVideoID = 1;
 	var numVideos = 0;
 	var videosPerPage = 50;
-	// XXX TODO make some config file where the user can specify their key
-	// XXX Remove our API key from the repo, and possible switch to OAuth
-	var youtubeAPIKey = "AIzaSyBf-B5_3Iz5a8Ij52BioFPOE4xJLqC9Sy8";
 
 	function loadNewTable(){
 		$('#vidRange').text("Showing videos " + currentVideoID.toString() + ' through ' + ((currentVideoID+videosPerPage <= numVideos) ? currentVideoID+videosPerPage : numVideos).toString() + " of " + numVideos.toString());
@@ -100,7 +97,7 @@
 					$('<td>').text(value.skips/value.views*100 + "%"),
 					$('<td>').text(value.errorCount/value.views*100 + "%")
 				).appendTo( "#videoTable" );
-				$.getJSON("https://www.googleapis.com/youtube/v3/videos?part=snippet&id=" + value.videoID + "&key=" + youtubeAPIKey, function(data) {
+				$.getJSON("/api/getVidInfo/" + value.videoID, function(data) {
 					$('#videoTable').find('#'+value.videoID).find('#title').text(data.items[0].snippet.title);
 				});
 			});
