--- a/views/history.ejs
+++ b/views/history.ejs
@@ -40,9 +40,6 @@
 
 <script type="text/javascript">
 	var currentVideoID = 1;
-	// XXX TODO make some config file where the user can specify their key
-	// XXX Remove our API key from the repo, and possible switch to OAuth
-	var youtubeAPIKey = "AIzaSyBf-B5_3Iz5a8Ij52BioFPOE4xJLqC9Sy8";
 
 	function loadNewTable(){
 		$.getJSON("/api/gethistory/", function(videos) {
@@ -53,7 +50,7 @@
 					$('<td>').attr("id", "title"),
 					$('<td>').text(value.time)
 				).appendTo( "#videoTable" );
-				$.getJSON("https://www.googleapis.com/youtube/v3/videos?part=snippet&id=" + value.videoID + "&key=" + youtubeAPIKey, function(data) {
+				$.getJSON("/api/getVidInfo/" + value.videoID, function(data) {
 					$('#videoTable').find('#'+value.videoID).find('#title').text(data.items[0].snippet.title);
 				});
 			});
