Revert "Some css changes to "About us" page"
This reverts commit 1be23ce5e04e17b3b9df4250138d6346f4dda753.

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,34 +1,7 @@
 <!DOCTYPE html>
 <html>
 <link rel="stylesheet" type="text/css" href="./css/newstyle.css">
-<link href="https://fonts.googleapis.com/css?family=Barrio|Open+Sans" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Raleway:600" rel="stylesheet">
-<style>
-h1 {
-	text-align: center;
-	font-family: 'Barrio', cursive;
-  	font-size: 32px;
-  	font-style: normal;
-  	font-variant: small-caps;
-  	font-weight: 100px;
-  	line-height: 20px;
-  	margin-left: auto;
-  	margin-right: auto;
-  	color: rgb(240, 240, 240);
-}
-body {
-	text-align: center;
-    font-size: 18px;
-    font-weight: lighter;
-    font-variant: normal;
-  	width: 75%;
-	font-family: 'Raleway', sans-serif;
-  	color: rgb(240, 240, 240);
-  	margin-left: auto;
-  	margin-right: auto;
-  	text-transform: none;
-}
-</style>
+
 <div id='navbar'>
   <ul>
     <li><a href='/'><span>Home</span></a></li>
@@ -55,13 +28,11 @@ body {
 		<div  id='title'>
 			<h1>About Us!</h1>
 		<div  id='textbody'>
-			<p>Hello! Welcome to The Weird Side of YouTube! We are an open-source project started by members of Alpha Chi Rho fraternity at Rensselaer Polytechnic Institute in Troy New York. If you're an avid fan of random and wierd Youtube videos, you're at the right place.
+			<p>Hello! Welcome to The Weird Side of YouTube! We are an open-source project started by members of Alpha Chi Rho fraternity at Rensselaer Polytechnic Institute in Troy New York. 
 			<br>
 			<br>
-			The current team is comprised of Mike Metrocavich, Colin Atkinson, Jacob Lane, Nathan Sivy, YoungChul Chun, James Lee. 
-			<br>
-			Past members include Erik Baktis, Matt Zielinski, Jake Martin, Ashwin Raghuraman, and Alex Metrocavich.	
-			<br>
+			The current team is comprised of Erik Baktis, Matt Zielinski, and Mike Metrocavich. Past members include Jake Martin Ashwin Raghuraman, and Alex Metrocavich
+			<br>	
 			<br>
 			If you would like to learn more about RCOS at RPI or any of the oher active projects, visit
 		<a href="https://rcos.io">our web page.</a></p>
