--- a/public/css/newstyle.css
+++ b/public/css/newstyle.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Barrio|Raleway:600');
 body {
   background: rgb(25, 25, 25);
   color: rgb(240, 240, 240);
@@ -172,7 +173,7 @@ input {
 
 #title {
   text-align: center;
-  font-family: 'Helvetica';
+  font-family: 'Barrio', cursive;
   font-size: 32px;
   font-style: normal;
   font-variant: small-caps;
@@ -189,7 +190,7 @@ input {
   font-weight: lighter;
   font-variant: normal;
   width: 75%;
-  font-family: 'Calibri';
+  font-family: 'Raleway', sans-serif;
   color: rgb(240, 240, 240);
   margin-left: auto;
   margin-right: auto;
