Font/spelling error, in memory of
Added a "in memory of" for Michael. Fixed spelling and fixed text being
all capital.

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -33,7 +33,7 @@
 			<p>Hello! Welcome to The Weird Side of YouTube! We are an open-source project started by members of Alpha Chi Rho fraternity at Rensselaer Polytechnic Institute in Troy New York. If you're an avid fan of random and wierd Youtube videos, you're at the right place.
 			<br>
 			<br>
-			The current team is comprised of Mike Metrocavich, Colin Atkinson, Jacob Lane, Nathan Sivy, YoungChul Chun, James Lee. 
+			The current team is comprised of Mike Metrocavich, Colin Atkinson, Jacob Lane, Nathan Siviy, YoungChul Chun, James Lee. 
 			<br>
 			Past members include Erik Baktis, Matt Zielinski, Jake Martin, Ashwin Raghuraman, and Alex Metrocavich.	
 			<br>
@@ -41,6 +41,14 @@
 			If you would like to learn more about RCOS at RPI or any of the oher active projects, visit
 		<a href="https://rcos.io">our web page.</a></p>
 		</div>
+    </div>
+    <div id='memory'>
+      <h2>In Memory of Michael Metrocavich</h2>
+    <div id='memorybody'>
+    <!-- In honor of mike -->
+      <p>Michael Metrocavich has recently passed away on February 23, 2017. He was the main contributor and inspiration for the undertaking of this open source project. Michael was a brilliant, kind and quirky person. He would always look for something interesting to happen or create interesting situations himself. Whether it was putting every single non-microwavable thing in the microwave or instigating a debate on a controversial topic, he always had fun. Michael will be sorely missed by us and the whole of the fraternity.</p>
+      <!-- add picture of mike here -->
+    </div>
 		</div>
 	</div>	
 </body>
