--- a/public/css/newstyle.css
+++ b/public/css/newstyle.css
@@ -186,7 +186,9 @@ input {
 
 #textbody {
   text-align: center;
+  text-transform: none;
   font-size: 18px;
+  font-size: 4vw;
   font-weight: lighter;
   font-variant: normal;
   width: 75%;
@@ -203,6 +205,33 @@ input {
   width: 75%;
   margin: auto;
   padding: 5px 5px 10px 5px;
+}
+
+#memory {
+  text-align: center;
+  font-family: 'Barrio', cursive;
+  font-size: 32px;
+  font-style: normal;
+  font-variant: small-caps;
+  font-weight: 100px;
+  line-height: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  color: rgb(240, 240, 240);
+}
+
+#memorybody{
+  text-align: center;
+  text-transform: none;
+  font-size: 18px;
+  font-size: 4vw;
+  font-weight: lighter;
+  font-variant: normal;
+  width: 75%;
+  font-family: 'Raleway', sans-serif;
+  color: rgb(240, 240, 240);
+  margin-left: auto;
+  margin-right: auto;
 }
 
 #youtube-player-container {
