a few edits to memory

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -46,7 +46,7 @@
       <h2>In Memory of Michael Metrocavich</h2>
     <div id='memorybody'>
     <!-- In honor of mike -->
-      <p>Michael Metrocavich has recently passed away on February 23, 2017. He was the main contributor and inspiration for the undertaking of this open source project. Michael was a brilliant, kind and quirky person. He would always look for something interesting to happen or create interesting situations himself. Whether it was putting every single non-microwavable thing in the microwave or instigating a debate on a controversial topic, he always had fun. Michael will be sorely missed by us and the whole of the fraternity.</p>
+      <p>Michael Metrocavich has recently passed away on February 23, 2017. He was the main contributor and inspiration for the undertaking of this open source project. Michael was a brilliant, kind and quirky person. He would always look for something interesting to happen or create interesting situations himself. Whether it was putting every single non-microwavable thing in the microwave or instigating a debate on a controversial topic, he always had fun. Michael will be missed by our team, his fraternity, and the entirety of the RCOS and RPI community.</p>
       <!-- add picture of mike here -->
     </div>
 		</div>
