Start setting up webpack

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <!--   Created at: RPI RCOS 2015: Contact information: raghua@rpi.edu, martij@rpi.edu, metrom@rpi.edu, metroa@rpi.edu -->
 <!DOCTYPE html>
 <html>
-<head> 
+<head>
 <title>Weird Side of YouTube</title>
   <link rel="stylesheet" type="text/css" href="./css/newstyle.css">
   <link href="https://fonts.googleapis.com/css?family=Barrio" rel="stylesheet">
@@ -24,7 +24,7 @@
 </head>
 
 <body>
- 
+
 <div id='navbar'>
   <ul>
     <li class='active'><a href='/'><span>Home</span></a></li>
@@ -47,14 +47,14 @@
 <div id='title'>
    <h1>Weird Side of YouTube</h1>
 </div>
-   
+
 <div id='youtube-player-container'>
-  <a href="#" onClick='jQuery("#youtube-player-container").tubeplayer("play", document.getElementById("videoID").value)'> 
-  </a> 
+  <a href="#" onClick='jQuery("#youtube-player-container").tubeplayer("play", document.getElementById("videoID").value)'>
+  </a>
 </div>
 
 <div id="playDiv">
-  <a class="playerbutton" onclick="playNextVid();">
+  <a id="playerbutton" class="playerbutton" onclick="playNextVid();">
         <span>Next</span>
   </a>
 </div>
