Get random initial video on load

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,6 +21,9 @@
   </style>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
   <script type='text/javascript' src='./js/jQuery.tubeplayer.min.js'></script>
+  <script type='text/javascript'>
+    window.initVid = '<%= videoID %>';
+  </script>
 </head>
 
 <body>
