--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
 <link rel="stylesheet" type="text/css" href="./css/newstyle.css">
-<link href="https://fonts.googleapis.com/css?family=Barrio|Open+Sans" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Raleway:600" rel="stylesheet">
-
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <div id='navbar'>
   <ul>
     <li><a href='/'><span>Home</span></a></li>
@@ -33,24 +32,24 @@
 			<p>Hello! Welcome to The Weird Side of YouTube! We are an open-source project started by members of Alpha Chi Rho fraternity at Rensselaer Polytechnic Institute in Troy New York. If you're an avid fan of random and wierd Youtube videos, you're at the right place.
 			<br>
 			<br>
-			The current team is comprised of Mike Metrocavich, Colin Atkinson, Jacob Lane, Nathan Siviy, YoungChul Chun, James Lee. 
+			The current team is comprised of Mike Metrocavich, Colin Atkinson, Jacob Lane, Nathan Siviy, YoungChul Chun, James Lee.
 			<br>
       <br>
-			Past members include Erik Baktis, Matt Zielinski, Jake Martin, Ashwin Raghuraman, and Alex Metrocavich.	
+			Past members include Erik Baktis, Matt Zielinski, Jake Martin, Ashwin Raghuraman, and Alex Metrocavich.
 			<br>
 			<br>
 			If you would like to learn more about RCOS at RPI or any of the oher active projects, visit
 		<a href="https://rcos.io">our web page.</a></p>
 		</div>
     </div>
-    <div id='memory'>
+    <div id='title'>
       <h2>In Memory of Michael Metrocavich</h2>
-    <div id='memorybody'>
+    <div id='textbody'>
     <!-- In honor of mike -->
       <p>Michael Metrocavich has recently passed away on February 23, 2017. He was the main contributor and inspiration for the undertaking of this open source project. Michael was a brilliant, kind and quirky person. He would always look for something interesting to happen or create interesting situations himself. Whether it was putting every single non-microwavable thing in the microwave or instigating a debate on a controversial topic, he always had fun. Michael will be missed by our team, his fraternity, and the entirety of the RCOS and RPI community.</p>
       <!-- add picture of mike here -->
     </div>
 		</div>
-	</div>	
+	</div>
 </body>
 </html>
