Set up admin panel bundle

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css?family=Barrio" rel="stylesheet">
   <style>
   #title {
-    text-align: center; 
+    text-align: center;
     font-family: 'Barrio', cursive;
     font-size: 32px;
     font-style: normal;
@@ -61,7 +61,7 @@
   </a>
 </div>
 
-<script type="text/javascript" src="bundle.js"></script>
+<script type="text/javascript" src="videos.js"></script>
 
 </body>
 
